--- a/pom.xml
+++ b/pom.xml
@@ -728,13 +728,13 @@
         <jaggery.version>0.12.1</jaggery.version>
         <jaggery.modules.version>1.5.0</jaggery.modules.version>
         <carbon.deployment.version>4.5.3</carbon.deployment.version>
-        <carbon.commons.version>4.4.8</carbon.commons.version>
+        <carbon.commons.version>4.5.4</carbon.commons.version>
         <carbon.analytics-common.version>5.1.0-SNAPSHOT</carbon.analytics-common.version>
-        <carbon.dashboards.version>1.0.11</carbon.dashboards.version>
-        <carbon.identity.version>5.0.7</carbon.identity.version>
-        <carbon.registry.version>4.4.8</carbon.registry.version>
-        <carbon.multitenancy.version>4.5.0</carbon.multitenancy.version>
-        <carbon.metrics.version>1.2.1</carbon.metrics.version>
+        <carbon.dashboards.version>1.0.20-SNAPSHOT</carbon.dashboards.version>
+        <carbon.identity.version>5.1.1-SNAPSHOT</carbon.identity.version>
+        <carbon.registry.version>4.5.5-SNAPSHOT</carbon.registry.version>
+        <carbon.multitenancy.version>4.5.3-SNAPSHOT</carbon.multitenancy.version>
+        <carbon.metrics.version>1.2.2-SNAPSHOT</carbon.metrics.version>
         <!--<carbon.ml.version>1.1.1</carbon.ml.version>-->
 
         <siddhi.version>3.1.0-SNAPSHOT</siddhi.version>
@@ -742,7 +742,7 @@
         <cep.version>4.1.1-SNAPSHOT</cep.version>
         
         <!-- Carbon kernel version-->
-        <carbon.kernel.version>4.4.3</carbon.kernel.version>
+        <carbon.kernel.version>4.4.6</carbon.kernel.version>
         <!--<carbon.kernel.imp.pkg.version>[4.3.0, 4.4.0)</carbon.kernel.imp.pkg.version>-->
         <!--<carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>-->
         <test.framework.version>4.4.2</test.framework.version>
