--- a/pom.xml
+++ b/pom.xml
@@ -725,9 +725,14 @@
 	
     <properties>
         <!--CEP versions-->
-        <jaggery.version>0.12.1</jaggery.version>
-        <jaggery.modules.version>1.5.0</jaggery.modules.version>
-        <carbon.deployment.version>4.5.3</carbon.deployment.version>
+        <jaggery.version>0.12.6-SNAPSHOT</jaggery.version>
+        <jaggery.modules.version>1.5.3-beta</jaggery.modules.version>
+
+        <!-- Carbon kernel version-->
+        <carbon.kernel.version>4.4.6</carbon.kernel.version>
+        <!--<carbon.kernel.imp.pkg.version>[4.3.0, 4.4.0)</carbon.kernel.imp.pkg.version>-->
+        <!--<carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>-->
+        <carbon.deployment.version>4.6.2-SNAPSHOT</carbon.deployment.version>
         <carbon.commons.version>4.5.4</carbon.commons.version>
         <carbon.analytics-common.version>5.1.0-SNAPSHOT</carbon.analytics-common.version>
         <carbon.dashboards.version>1.0.20-SNAPSHOT</carbon.dashboards.version>
@@ -736,19 +741,15 @@
         <carbon.multitenancy.version>4.5.3-SNAPSHOT</carbon.multitenancy.version>
         <carbon.metrics.version>1.2.2-SNAPSHOT</carbon.metrics.version>
         <!--<carbon.ml.version>1.1.1</carbon.ml.version>-->
+        <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
+        <carbon.event-processing.version>2.1.0-SNAPSHOT</carbon.event-processing.version>
 
         <siddhi.version>3.1.0-SNAPSHOT</siddhi.version>
-        <carbon.event-processing.version>2.1.0-SNAPSHOT</carbon.event-processing.version>
+
         <cep.version>4.1.1-SNAPSHOT</cep.version>
-        
-        <!-- Carbon kernel version-->
-        <carbon.kernel.version>4.4.6</carbon.kernel.version>
-        <!--<carbon.kernel.imp.pkg.version>[4.3.0, 4.4.0)</carbon.kernel.imp.pkg.version>-->
-        <!--<carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>-->
+
         <test.framework.version>4.4.2</test.framework.version>
         <test.framework.util.version>4.4.1</test.framework.util.version>
-
-        <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
 
         <!--WSO2 versions-->
         <stratos.ui.version>2.2.0</stratos.ui.version>
