--- a/modules/samples/producers/jms/build.xml
+++ b/modules/samples/producers/jms/build.xml
@@ -27,11 +27,11 @@
     <property name="lib.dir" value="../../lib"/>
 
 
-    <property name="sn" value=""/>
+    <property name="sn" value="&quot;&quot;"/>
     <property name="topicName" value=""/>
     <property name="queueName" value=""/>
     <property name="format" value=""/>
-    <property name="filePath" value=""/>
+    <property name="filePath" value="&quot;&quot;"/>
     <property name="broker" value=""/>
 
     <path id="javac.classpath">
