--- a/modules/samples/producers/kafka/build.xml
+++ b/modules/samples/producers/kafka/build.xml
@@ -27,8 +27,8 @@
     <property name="password" value="admin"/>
 
     <property name="url" value=""/>
-    <property name="sn" value=""/>
-    <property name="filePath" value=""/>
+    <property name="sn" value="&quot;&quot;"/>
+    <property name="filePath" value="&quot;&quot;"/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
