--- a/modules/samples/producers/mqtt/build.xml
+++ b/modules/samples/producers/mqtt/build.xml
@@ -25,10 +25,10 @@
     <property name="lib.dir" value="../../lib"/>
 
 
-    <property name="sn" value=""/>
+    <property name="sn" value="&quot;&quot;"/>
     <property name="topic" value=""/>
     <property name="format" value=""/>
-    <property name="filePath" value=""/>
+    <property name="filePath" value="&quot;&quot;"/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
