--- a/modules/samples/producers/wso2-event/build.xml
+++ b/modules/samples/producers/wso2-event/build.xml
@@ -32,8 +32,8 @@
     <property name="delay" value="1000"/>
 
     <property name="streamId" value=""/>
-    <property name="sn" value=""/>
-    <property name="filePath" value=""/>
+    <property name="sn" value="&quot;&quot;"/>
+    <property name="filePath" value="&quot;&quot;"/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
