--- a/pom.xml
+++ b/pom.xml
@@ -727,14 +727,17 @@
         <!--CEP versions-->
         <jaggery.version>0.12.1</jaggery.version>
         <jaggery.modules.version>1.5.0</jaggery.modules.version>
-        <carbon.deployment.version>4.5.3</carbon.deployment.version>
+        <sso.feature.version>1.5.1</sso.feature.version>
+
+        <carbon.deployment.version>4.6.0</carbon.deployment.version>
         <carbon.commons.version>4.4.8</carbon.commons.version>
         <carbon.analytics-common.version>5.1.0-SNAPSHOT</carbon.analytics-common.version>
-        <carbon.dashboards.version>1.0.11</carbon.dashboards.version>
+        <carbon.dashboards.version>2.0.0-SNAPSHOT</carbon.dashboards.version>
         <carbon.identity.version>5.0.7</carbon.identity.version>
         <carbon.registry.version>4.4.8</carbon.registry.version>
         <carbon.multitenancy.version>4.5.0</carbon.multitenancy.version>
         <carbon.metrics.version>1.2.1</carbon.metrics.version>
+        <carbon.analytics.common.gadget.version>5.1.0.SNAPSHOT</carbon.analytics.common.gadget.version>
         <!--<carbon.ml.version>1.1.1</carbon.ml.version>-->
 
         <siddhi.version>3.1.0-SNAPSHOT</siddhi.version>
