--- a/pom.xml
+++ b/pom.xml
@@ -737,6 +737,7 @@
         <carbon.analytics-common.version>5.1.0-SNAPSHOT</carbon.analytics-common.version>
         <carbon.dashboards.version>2.0.0-SNAPSHOT</carbon.dashboards.version>
         <carbon.identity.version>5.1.1-SNAPSHOT</carbon.identity.version>
+        <carbon.identity.SNAPSHOT.JAR.version>5.1.1.SNAPSHOT</carbon.identity.SNAPSHOT.JAR.version>
         <carbon.registry.version>4.5.5</carbon.registry.version>
         <carbon.multitenancy.version>4.5.3-SNAPSHOT</carbon.multitenancy.version>
         <carbon.metrics.version>1.2.2</carbon.metrics.version>
