--- a/pom.xml
+++ b/pom.xml
@@ -726,7 +726,7 @@
     <properties>
         <!--CEP versions-->
         <jaggery.version>0.12.6</jaggery.version>
-        <jaggery.modules.version>1.5.3-SNAPSHOT</jaggery.modules.version>
+        <jaggery.modules.version>1.5.3</jaggery.modules.version>
         <sso.feature.version>1.5.1</sso.feature.version>
         <!-- Carbon kernel version-->
         <carbon.kernel.version>4.4.7</carbon.kernel.version>
