Adding geo dashboard feature and adding carbon.xml and GeoDashboard server role

--- a/modules/distribution/src/assembly/filter.properties
+++ b/modules/distribution/src/assembly/filter.properties
@@ -17,6 +17,7 @@
 product.name=WSO2 Complex Event Processor
 product.key=CEP
 default.server.role=ComplexEventProcessor
+geodashboard.role=GeoDashboard
 product.version=4.2.0
 carbon.version=4.4.7
 cep.version=4.2.0
