--- a/modules/org.wso2.cep.storm.dependencies/pom.xml
+++ b/modules/org.wso2.cep.storm.dependencies/pom.xml
@@ -142,7 +142,16 @@
             <artifactId>javax.cache.wso2</artifactId>
             <version>${carbon.kernel.version}</version>
         </dependency>
-
+	<dependency>
+            <groupId>org.eclipse.osgi</groupId>
+            <artifactId>org.eclipse.osgi</artifactId>
+	    <version>${org.eclipse.osgi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.osgi</groupId>
+            <artifactId>org.eclipse.osgi.services</artifactId>
+	    <version>${version.equinox.osgi.services}</version>
+        </dependency>
         <!-- Siddhi Time extension -->
         <dependency>
             <groupId>org.wso2.siddhi</groupId>
@@ -400,6 +409,9 @@
         <hazelcast.version>3.5.2.wso2v1</hazelcast.version>
         <joda.time.version>2.2</joda.time.version>
         <gson.version>2.5</gson.version>
+	<org.eclipse.osgi.version>3.7.0.v20110613</org.eclipse.osgi.version>
+	<version.equinox.osgi.services>3.3.100.v20120522-1822</version.equinox.osgi.services>
+
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.scm.id>my-scm-server</project.scm.id>
@@ -409,7 +421,7 @@
         <repository>
             <id>nexus-releases</id>
             <name>WSO2 Nexus Release Repository</name>
-            <url>http://maven.wso2.org/nexus/service/local/staging/deploy/maven2/</url>
+            <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
             <id>wso2.snapshots</id>
