[Template Manager] Adding Jaggery App Template Deployer feature to CEP product.

--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -320,6 +320,10 @@
                                     org.wso2.carbon.analytics-common:org.wso2.carbon.dashboard.template.deployer.server.feature:${carbon.analytics-common.version}
                                 </featureArtifactDef>
 
+                                <featureArtifactDef>
+                                    org.wso2.carbon.analytics-common:org.wso2.carbon.jaggeryapp.template.deployer.server.feature:${carbon.analytics-common.version}
+                                </featureArtifactDef>
+
                                 <!-- ML features -->
                                 <!--<featureArtifactDef>-->
                                     <!--org.wso2.carbon.ml:org.wso2.carbon.ml.commons.feature:${carbon.ml.version}-->
@@ -683,6 +687,11 @@
 
                                 <feature>
                                     <id>org.wso2.carbon.dashboard.template.deployer.server.feature.group</id>
+                                    <version>${carbon.analytics-common.version}</version>
+                                </feature>
+
+                                <feature>
+                                    <id>org.wso2.carbon.jaggeryapp.template.deployer.server.feature.group</id>
                                     <version>${carbon.analytics-common.version}</version>
                                 </feature>
 
