Dropped aggregated gadget template feature and added separate features

--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -308,12 +308,15 @@
                                     org.wso2.carbon.metrics:org.wso2.carbon.metrics.feature:${carbon.metrics.version}
                                 </featureArtifactDef>
 
-                                <featureArtifactDef>
-                                    org.wso2.carbon.analytics-common:org.wso2.carbon.analytics.gadget.template.feature:${carbon.analytics-common.version}
-                                </featureArtifactDef>
 
                                 <featureArtifactDef>
-                                    org.wso2.carbon.analytics-common:org.wso2.carbon.gadget.template.deployer.server.feature:${carbon.analytics-common.version}
+                                    org.wso2.carbon.analytics-common:org.wso2.carbon.analytics.gadget.chart.template.feature:${carbon.analytics-common.version}
+                                </featureArtifactDef>
+                                <featureArtifactDef>
+                                    org.wso2.carbon.analytics-common:org.wso2.carbon.analytics.gadget.rest.provider.template.feature:${carbon.analytics-common.version}
+                                </featureArtifactDef>
+                                <featureArtifactDef>
+                                    org.wso2.carbon.analytics-common:org.wso2.carbon.analytics.gadget.realtime.provider.template.feature:${carbon.analytics-common.version}
                                 </featureArtifactDef>
 
                                 <featureArtifactDef>
@@ -681,11 +684,6 @@
                                 </feature>
 
                                 <feature>
-                                    <id>org.wso2.carbon.gadget.template.deployer.server.feature.group</id>
-                                    <version>${carbon.analytics-common.version}</version>
-                                </feature>
-
-                                <feature>
                                     <id>org.wso2.carbon.dashboard.template.deployer.server.feature.group</id>
                                     <version>${carbon.analytics-common.version}</version>
                                 </feature>
@@ -979,7 +977,15 @@
                                 </feature>
 
                                 <feature>
-                                    <id>org.wso2.carbon.analytics.gadget.template.feature.group</id>
+                                    <id>org.wso2.carbon.analytics.gadget.chart.template.feature.group</id>
+                                    <version>${carbon.analytics-common.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.analytics.gadget.rest.provider.template.feature.group</id>
+                                    <version>${carbon.analytics-common.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.analytics.gadget.realtime.provider.template.feature.group</id>
                                     <version>${carbon.analytics-common.version}</version>
                                 </feature>
 
