template deployer feature added

--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -255,6 +255,11 @@
                                 <featureArtifactDef>
                                     org.wso2.carbon.analytics-common:org.wso2.carbon.event.publisher.template.deployer.server.feature:${carbon.analytics-common.version}
                                 </featureArtifactDef>
+
+                                <featureArtifactDef>
+                                    org.wso2.carbon.analytics-common:org.wso2.carbon.gadget.template.deployer.server.feature:${carbon.analytics-common.version}
+                                </featureArtifactDef>
+                                
                                 <featureArtifactDef>
                                     org.wso2.carbon.event-processing:org.wso2.carbon.siddhi.tryit.feature:${carbon.event-processing.version}
                                 </featureArtifactDef>
@@ -649,6 +654,11 @@
                                 <feature>
                                     <id>org.wso2.carbon.dashboard.deployment.feature.group</id>
                                     <version>${carbon.dashboards.version}</version>
+                                </feature>
+
+                                <feature>
+                                    <id>org.wso2.carbon.gadget.template.deployer.server.feature.group</id>
+                                    <version>${carbon.analytics-common.version}</version>
                                 </feature>
 
                                 <!-- cep ui features -->
