--- a/modules/samples/consumers/mqtt/build.xml
+++ b/modules/samples/consumers/mqtt/build.xml
@@ -18,7 +18,7 @@
 
 <project default="run">
 
-    <property name="carbon.home" value="../../.."/>
+    <property name="carbon.home" value="../../../.."/>
     <property name="lib.dir" value="../../lib"/>
     <property name="src.dir" value="src/main/java"/>
     <property name="resources.dir" value="src/main/resources"/>
