--- a/modules/samples/consumers/wso2-event/build.xml
+++ b/modules/samples/consumers/wso2-event/build.xml
@@ -18,7 +18,7 @@
 
 <project default="run">
 
-    <property name="cep.home" value="../../.."/>
+    <property name="cep.home" value="../../../.."/>
     <property name="src.dir" value="src/main/java"/>
     <!--<property name="lib.dir" value="lib"/>-->
     <property name="resources.dir" value="src/main/resources"/>
