--- a/pom.xml
+++ b/pom.xml
@@ -744,8 +744,8 @@
         <carbon.metrics.version>1.2.2</carbon.metrics.version>
         <!--<carbon.ml.version>1.1.1</carbon.ml.version>-->
         <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
-        <carbon.event-processing.version>2.1.2</carbon.event-processing.version>
-        <siddhi.version>3.1.1</siddhi.version>
+        <carbon.event-processing.version>2.1.3-SNAPSHOT</carbon.event-processing.version>
+        <siddhi.version>3.1.2-SNAPSHOT</siddhi.version>
         <cep.version>4.2.0-SNAPSHOT</cep.version>
         <test.framework.version>4.4.2</test.framework.version>
         <test.framework.util.version>4.4.1</test.framework.util.version>
