--- a/modules/org.wso2.cep.storm.dependencies/pom.xml
+++ b/modules/org.wso2.cep.storm.dependencies/pom.xml
@@ -395,12 +395,12 @@
         <carbon.kernel.version>4.4.7</carbon.kernel.version>
 
         <!-- Carbon component dependency versions -->
-        <carbon.analytics.common.version>5.1.2-SNAPSHOT</carbon.analytics.common.version>
+        <carbon.analytics.common.version>5.1.3</carbon.analytics.common.version>
         <!--<carbon.ml.version>1.1.1</carbon.ml.version>-->
 
         <!--CEP versions-->
-        <siddhi.version>3.1.2-SNAPSHOT</siddhi.version>
-        <carbon.event.processing.version>2.1.3-SNAPSHOT</carbon.event.processing.version>
+        <siddhi.version>3.1.2</siddhi.version>
+        <carbon.event.processing.version>2.1.4</carbon.event.processing.version>
 
         <!-- Third party dependencies -->
         <libthrift.wso2.version>0.9.2.wso2v1</libthrift.wso2.version>
