--- a/pom.xml
+++ b/pom.xml
@@ -727,37 +727,37 @@
     <properties>
         <!--CEP versions-->
         <jaggery.version>0.12.8</jaggery.version>
-        <jaggery.modules.version>1.5.4</jaggery.modules.version>
-        <sso.feature.version>1.5.4</sso.feature.version>
+        <jaggery.modules.version>1.5.5</jaggery.modules.version>
+        <sso.feature.version>1.5.5</sso.feature.version>
         <!-- Carbon kernel version-->
-        <carbon.kernel.version>4.4.7</carbon.kernel.version>
+        <carbon.kernel.version>4.4.9</carbon.kernel.version>
         <!--<carbon.kernel.imp.pkg.version>[4.3.0, 4.4.0)</carbon.kernel.imp.pkg.version>-->
         <!--<carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>-->
         <carbon.deployment.version>4.7.0</carbon.deployment.version>
         <carbon.commons.version>4.5.4</carbon.commons.version>
-        <carbon.analytics-common.version>5.1.2</carbon.analytics-common.version>
-        <carbon.dashboards.version>2.0.2-SNAPSHOT</carbon.dashboards.version>
+        <carbon.analytics-common.version>5.1.3</carbon.analytics-common.version>
+        <carbon.dashboards.version>2.0.2</carbon.dashboards.version>
         <carbon.identity.version>5.2.0</carbon.identity.version>
-        <carbon.identity.auth.saml2.version>5.1.1</carbon.identity.auth.saml2.version>
-        <carbon.registry.version>4.5.5</carbon.registry.version>
+        <carbon.identity.auth.saml2.version>5.1.3</carbon.identity.auth.saml2.version>
+        <carbon.registry.version>4.6.0</carbon.registry.version>
         <carbon.multitenancy.version>4.6.0</carbon.multitenancy.version>
         <carbon.metrics.version>1.2.2</carbon.metrics.version>
         <!--<carbon.ml.version>1.1.1</carbon.ml.version>-->
         <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
-        <carbon.event-processing.version>2.1.3</carbon.event-processing.version>
+        <carbon.event-processing.version>2.1.4</carbon.event-processing.version>
         <siddhi.version>3.1.2</siddhi.version>
-        <cep.version>4.2.0-SNAPSHOT</cep.version>
+        <cep.version>4.2.0</cep.version>
         <test.framework.version>4.4.2</test.framework.version>
         <test.framework.util.version>4.4.1</test.framework.util.version>
 
         <!--WSO2 versions-->
         <stratos.ui.version>2.2.0</stratos.ui.version>
-        <rampart.wso2.version>1.6.1-wso2v14</rampart.wso2.version>
-        <axis2.version>1.6.1.wso2v12</axis2.version>
-        <orbit.version.axiom>1.2.11.wso2v10</orbit.version.axiom>
+        <rampart.wso2.version>1.6.1-wso2v21</rampart.wso2.version>
+        <axis2.version>1.6.1.wso2v20</axis2.version>
+        <orbit.version.axiom>1.2.11.wso2v11</orbit.version.axiom>
         <version.commons.logging>1.1</version.commons.logging>
         <log4j.wso2.version>1.2.17.wso2v1</log4j.wso2.version>
-        <httpclient.wso2.version>4.3.1.wso2v2</httpclient.wso2.version>
+        <httpclient.wso2.version>4.3.2.wso2v1</httpclient.wso2.version>
         <httpcore.wso2.version>4.3.3.wso2v1</httpcore.wso2.version>
         <cipher.tool.version>1.0.0-wso2v3</cipher.tool.version>
 
@@ -774,7 +774,6 @@
         <apache.kafka.version>0.8.1</apache.kafka.version>
         <javax.servlet.api.version>2.5</javax.servlet.api.version>
         <javax.javax.servlet.api.version>3.1.0</javax.javax.servlet.api.version>
-        <shindig.version>2.0.2-SNAPSHOT</shindig.version>
         <h2.version>1.2.147</h2.version>
         <jetty.version>9.2.7.v20150116</jetty.version>
         <javax.websocket.api.version>1.0</javax.websocket.api.version>
