Adding integration testcase for kafka receiver (#CEP-1596)

--- a/modules/integration/tests-integration/tests/pom.xml
+++ b/modules/integration/tests-integration/tests/pom.xml
@@ -452,6 +452,14 @@
             <groupId>org.wso2.carbon.metrics</groupId>
             <artifactId>org.wso2.carbon.metrics.impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.10</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-test</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
